<resources>
    <string name="app_name">Puzzledroid</string>
    <string name="app_version">v 0.5</string>
    <string name="flooterText">UOC Jesuïtes Educació 2020 · SPS Group · Puzzledroid</string>


    <string name="btn_single_player">JUGAR</string>

    <string name="btn_toolbar_help">"?"</string>
    <string name="btn_toolbar_config">"⚙"️</string>
    <string name="btn_toolbar_classification">"🏅"</string>

    <string name="save_settings">GUARDAR CAMBIOS</string>
    <string name="music_background">Musica</string>
    <string name="sound_pool">Efectos de sonido</string>
    <string name="music_default">Musica oficial</string>
    <string name="vibrate">Vibracion</string>
    <string name="btn_multiplayer">Multijugador</string>
    <string name="title_classification">CLASIFICACION</string>
    <string name="title_classification2">AYUDA</string>
    <string name="popup">¡ENHORABUENA!</string>
    <string name="btn_close_popup">CERRAR</string>
    <string name="btn_classification_popup">VER CLASIFICACIÓN</string>
    <string name="Settings">OPCIONES</string>
    <string name="rb_default">Predeterminada</string>
    <string name="rb_select">Explorar</string>
    <string name="title_classification3">NIVELES</string>
    <string name="hastardado">Has tardado </string>
    <string name="segundos"> segundos</string>
    <string name="completado">¡COMPLETADO!</string>
    <string name="verescore">Haz click aquí para visualizar tu puntuación.</string>
    <string name="facil">FÁCIL</string>
    <string name="medio">MEDIO</string>
    <string name="dificil">DIFICIL</string>
    <string name="segundos2"> SEGUNDOS</string>
    <string name="sinfotos"> No hay fotos disponibles. Añade una foto para seguir jugando.</string>





</resources>
