<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:theme="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"></TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_toolbar"
            android:onClick="onClickGoTo"
            android:text="@string/btn_toolbar_help"
            android:textStyle="bold" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:layout_marginEnd="70dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_toolbar"
            android:text="@string/btn_toolbar_config" />

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>