<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient_list"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Settings"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center"
            android:text="Settings"
            android:textSize="20dp"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:onClick="AudioMediaPlayer"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="@string/music_background"
            tools:checked="true" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="AudioSoundPool"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="@string/sound_pool" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="Switch" />

        <Button
            android:id="@+id/btn_saveSettings"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/button_main_menu"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClickGoTo"
            android:text="@string/save_settings"
            android:textColor="@color/homeBtnText"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>